--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -51,8 +51,8 @@ spring:
         database: MYSQL
         show-sql: true
         properties:
-            hibernate.ddl-auto: update
-            hibernate.enable_lazy_load_no_trans: true
+            #hibernate.ddl-auto: update
+            #hibernate.enable_lazy_load_no_trans: true
             hibernate.id.new_generator_mappings: true
             hibernate.connection.provider_disables_autocommit: true
             hibernate.cache.use_second_level_cache: true
