--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -42,8 +42,8 @@ spring:
         database: MYSQL
         show-sql: false
         properties:
-            hibernate.ddl-auto: update
-            hibernate.enable_lazy_load_no_trans: true
+            #hibernate.ddl-auto: update
+            #hibernate.enable_lazy_load_no_trans: true
             hibernate.id.new_generator_mappings: true
             hibernate.connection.provider_disables_autocommit: true
             hibernate.cache.use_second_level_cache: true
